changed some of my bio, added my picture

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="IMG_2449.JPG" class="auth-image" alt="Brittany">
+      <img src="assets/images/IMG_2449.jpg" class="auth-image" alt="Brittany">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p>Hello, I like to do yoga, take naps, listen to music and drive fast. I am happiest when I am outdoors, I occasionally like to go out and grab a drink with friends.</p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>I was born in San Bernardino, CA was raised in San Diego. I am full mexican and speak a bit of spanish.</p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>I have 3 fur babies, Cash, Mazi & Lotus. Cash is my English Bull Terrier he is 6 years old. My other two are cats, Mazi is a boy and he is 6 years old. Lotus is my only girl, she is 3 years old.</p>
 
     </section>
 
