changed about me

--- a/index.html
+++ b/index.html
@@ -5,42 +5,54 @@
   <meta charset="UTF-8">
   <title>About | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Britt Dawg</a>
+      <!-- <a href="index.html" id="logo"></a> -->
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <!-- <a href="contact.html">Contact</a> -->
       </nav>
     </div>
   </header>
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>About Me</h1>
+      <h1>Brittany Torres </h1>
+      <img src="assets/images/IMG_2449.jpg" class="auth-image"  alt="Brittany">
+        <div class="links">
+          <a href="assets/images/Brittany Resume 2019.pdf" id="res" download="Brittany Resume 2019.pdf">  Resume   </a>
+          <a href="https://github.com/torresB" id= "gitH">   github   </a>
+          <a href="https://www.linkedin.com/in/brittany-torres-b35b75184/" id="linkI">   linkedin  </a>
+          <br>
+          <br>
+          Web Developer
+          <br>
+          Location: San Diego, CA 
+          <br>
+          Email: Torresbrittany1994@gmail.come Phone: (619)779-0495
+        </div>
+  
+    
+ 
 
-      <img src="assets/images/IMG_2449.jpg" class="auth-image" alt="Brittany">
-
-      <p>Hello, I like to do yoga, take naps, listen to music and drive fast. I am happiest when I am outdoors, I occasionally like to go out and grab a drink with friends.</p>
-
-      <p>I was born in San Bernardino, CA was raised in San Diego. I am full mexican and speak a bit of spanish.</p>
-
-      <p>I have 3 fur babies, Cash, Mazi & Lotus. Cash is my English Bull Terrier he is 6 years old. My other two are cats, Mazi is a boy and he is 6 years old. Lotus is my only girl, she is 3 years old.</p>
+    
 
     </section>
 
   </div>
 
-  <footer>
+
+  <!-- <footer>
     <div class="container">
       Copyright &copy; 
     </div>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
