--- a/portfolio.html
+++ b/portfolio.html
@@ -5,60 +5,47 @@
   <meta charset="UTF-8">
   <title>Portfolio | Britt Dawg</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Britt Dawg</a>
+      
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <!-- <a href="contact.html">Contact</a> -->
       </nav>
     </div>
   </header>
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Portfolio</h1>
-
+      <h4>Portfolio</h4>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a href="https://rgonz166.github.io/Pre-Game/"><img src="assets/images/logoWhite.png" alt="PreGame"></a>
 
-        <h3>Word Guess</h3>
+        <h3>Pre-Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <a href="https://torresb.github.io/GifTastic/"><img src="assets/images/giphylogo.png" alt="GifTastic"></a>
 
-        <h3>RPG Game</h3>
+        <h3>GifTastic</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+         <a href="https://torresb.github.io/TriviaGame/"><img src="assets/images/Ahhrealmonsters copy.png" alt="Trivia Game"></a>
+    <h3> Trivia Game</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
+      <div id="links">
+        <a href="https://github.com/rgonz166/Pre-Game.git">Pre-Game </a> ~
+        <a href="https://github.com/torresB/GifTastic.git">  GifTastic ~ </a> ~
+        <a href="https://github.com/torresB/TriviaGame.git">  Trivia Game  </a>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
     </section>
 
   </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy;
-    </div>
-  </footer>
 </body>
 
 </html>
