--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <h3>GifTastic</h3>
       </div>
       <div class="work">
-         <a href="https://torresb.github.io/TriviaGame/"><img src="assets/images/Ahhrealmonsters copy.png" alt="Trivia Game"></a>
+         <a href="https://torresb.github.io/TriviaGame/"><img src="assets/images/Ahhrealmonsterscopy.png" alt="Trivia Game"></a>
     <h3> Trivia Game</h3>
       </div>
       <div id="links">
