had to change resume link name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Brittany Torres </h1>
       <img src="assets/images/IMG_2449.jpg" class="auth-image"  alt="Brittany">
         <div class="links">
-          <a href="assets/images/Brittany Resume 2019.pdf" id="res" download="Brittany Resume 2019.pdf">  Resume   </a>
+          <a href="assets/images/BrittanyResume2019.pdf" id="res" download="Brittany Resume 2019.pdf">  Resume   </a>
           <a href="https://github.com/torresB" id= "gitH">   github   </a>
           <a href="https://www.linkedin.com/in/brittany-torres-b35b75184/" id="linkI">   linkedin  </a>
           <br>
