--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,10 @@
          <a href="https://torresb.github.io/TriviaGame/"><img src="assets/images/Ahhrealmonsterscopy.png" alt="Trivia Game"></a>
     <h3> Trivia Game</h3>
       </div>
+      <div class="work">
+        <a href="https://github.com/matteuc/chef-me-up"><img src="assets/images/google-logo.PNG" alt="chefMEup"></a>
+   <h3> chefMEup</h3>
+     </div>
       <div id="links">
         <a href="https://github.com/rgonz166/Pre-Game.git">Pre-Game </a> ~
         <a href="https://github.com/torresB/GifTastic.git">  GifTastic ~ </a> ~
